Kubernet/user-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-frontend
  labels:
    app: user-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-frontend
  template:
    metadata:
      labels:
        app: user-frontend
    spec:
      containers:
        - name: user-frontend
          image: gcr.io/interview-ai-482614/user-frontend:PLACEHOLDER
          imagePullPolicy: Always
          ports:
            - containerPort: 80
