Kubernet/user-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-frontend-service
spec:
  selector:
    app: user-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
